--- a/Everlasting/Everlasting.vcxproj
+++ b/Everlasting/Everlasting.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="..\Engine\Assist\tinyxmlparser.cpp" />
     <ClCompile Include="..\Engine\GMAnimation.cpp" />
     <ClCompile Include="..\Engine\GMBaseManipulator.cpp" />
+    <ClCompile Include="..\Engine\GMCharacter.cpp" />
     <ClCompile Include="..\Engine\GMCommonUniform.cpp" />
     <ClCompile Include="..\Engine\GMEngine.cpp" />
     <ClCompile Include="..\Engine\GMKit.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="..\Engine\Assist\tinyxml.h" />
     <ClInclude Include="..\Engine\GMAnimation.h" />
     <ClInclude Include="..\Engine\GMBaseManipulator.h" />
+    <ClInclude Include="..\Engine\GMCharacter.h" />
     <ClInclude Include="..\Engine\GMCommon.h" />
     <ClInclude Include="..\Engine\GMCommonUniform.h" />
     <ClInclude Include="..\Engine\GMDispatchCompute.h" />
