--- a/Everlasting/Everlasting.vcxproj
+++ b/Everlasting/Everlasting.vcxproj
@@ -136,12 +136,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Engine\Animation\GMAnimation.cpp" />
+    <ClCompile Include="..\Engine\Animation\GMSoftBone.cpp" />
+    <ClCompile Include="..\Engine\Animation\UpdateSoftBone.cpp" />
     <ClCompile Include="..\Engine\Assist\mikktspace.cpp" />
     <ClCompile Include="..\Engine\Assist\tinystr.cpp" />
     <ClCompile Include="..\Engine\Assist\tinyxml.cpp" />
     <ClCompile Include="..\Engine\Assist\tinyxmlerror.cpp" />
     <ClCompile Include="..\Engine\Assist\tinyxmlparser.cpp" />
-    <ClCompile Include="..\Engine\GMAnimation.cpp" />
     <ClCompile Include="..\Engine\GMBaseManipulator.cpp" />
     <ClCompile Include="..\Engine\GMCharacter.cpp" />
     <ClCompile Include="..\Engine\GMCommonUniform.cpp" />
@@ -162,10 +164,12 @@
     <ClCompile Include="UI\GMUIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Engine\Animation\GMAnimation.h" />
+    <ClInclude Include="..\Engine\Animation\GMSoftBone.h" />
+    <ClInclude Include="..\Engine\Animation\UpdateSoftBone.h" />
     <ClInclude Include="..\Engine\Assist\mikktspace.h" />
     <ClInclude Include="..\Engine\Assist\tinystr.h" />
     <ClInclude Include="..\Engine\Assist\tinyxml.h" />
-    <ClInclude Include="..\Engine\GMAnimation.h" />
     <ClInclude Include="..\Engine\GMBaseManipulator.h" />
     <ClInclude Include="..\Engine\GMCharacter.h" />
     <ClInclude Include="..\Engine\GMCommon.h" />
