--- a/Everlasting/Everlasting.vcxproj.filters
+++ b/Everlasting/Everlasting.vcxproj.filters
@@ -33,6 +33,9 @@
     <Filter Include="GMEngine\osgQt">
       <UniqueIdentifier>{99111f8d-5854-46c2-bd72-7eeb6743c6db}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GMEngine\Animation">
+      <UniqueIdentifier>{69cfbde1-9780-4b32-9cb2-9710f5805d51}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Engine\Assist\tinystr.cpp">
@@ -89,9 +92,6 @@
     <ClCompile Include="..\Engine\GMMaterial.cpp">
       <Filter>GMEngine\Core\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Engine\GMAnimation.cpp">
-      <Filter>GMEngine\Core\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\Engine\Assist\mikktspace.cpp">
       <Filter>GMEngine\Assist</Filter>
     </ClCompile>
@@ -106,6 +106,15 @@
     </ClCompile>
     <ClCompile Include="..\Engine\GMCharacter.cpp">
       <Filter>GMEngine\Core\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Engine\Animation\GMAnimation.cpp">
+      <Filter>GMEngine\Animation</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Engine\Animation\GMSoftBone.cpp">
+      <Filter>GMEngine\Animation</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Engine\Animation\UpdateSoftBone.cpp">
+      <Filter>GMEngine\Animation</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -160,9 +169,6 @@
     <ClInclude Include="..\Engine\GMMaterial.h">
       <Filter>GMEngine\Core\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Engine\GMAnimation.h">
-      <Filter>GMEngine\Core\Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\Engine\Assist\mikktspace.h">
       <Filter>GMEngine\Assist</Filter>
     </ClInclude>
@@ -180,6 +186,15 @@
     </ClInclude>
     <ClInclude Include="..\Engine\GMCharacter.h">
       <Filter>GMEngine\Core\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Engine\Animation\GMAnimation.h">
+      <Filter>GMEngine\Animation</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Engine\Animation\GMSoftBone.h">
+      <Filter>GMEngine\Animation</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Engine\Animation\UpdateSoftBone.h">
+      <Filter>GMEngine\Animation</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
